HS-1702 - add unit tests and remove grey-box tests.